# Raytracer

./: .gitignore  CMakeLists.txt
raytracer/: CMakeLists.txt  camera_options.h  commons.hpp  image.h  raytracer.h  render_options.h  test.cpp
raytracer-debug/: CMakeLists.txt  test.cpp
raytracer-debug/tests/box/: CornellBox-Sphere.mtl
raytracer-debug/tests/shading_parts/: scene.mtl
raytracer-debug/tests/triangle/: scene.mtl
raytracer-geom/: CMakeLists.txt  geometry.h  intersection.h  ray.h  sphere.h  test.cpp  triangle.h  vector.h
raytracer-reader/: CMakeLists.txt  light.h  material.h  object.h  scene.h  test.cpp
raytracer-reader/tests/box/: CornellBox-Sphere.mtl
raytracer/tests/classic_box/: CornellBox-Original.mtl
raytracer/tests/distorted_box/: CornellBox-Original.mtl
raytracer/tests/mirrors/: materials.mtl
tools/cmake/: BuildFlags.cmake  FindCatch.cmake  TestSolution.cmake
tools/util/: strict_iterator.h  util.h
